# UAV-biophysical-modelling

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  uav-biophysical-estimation.yml  uavBiophysicalModelling
src/UAVBiophysicalModelling/: __init__.py  estimation.py
src/UAVBiophysicalModelling/config/: NN_params.py  splits_params.py
src/UAVBiophysicalModelling/utils/: example_dataset_predict.xlsx  example_dataset_train_val_test.xlsx
src/uav_biophysical_estimation/: __init__.py
src/uav_biophysical_estimation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/uav_biophysical_estimation/config/: RF_params.py
src/uav_biophysical_estimation/processing/: NN_processing.py  RF_processing.py  splits_processing.py
